--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -62,12 +62,6 @@ hr {
 	margin-top: 0vh;
 	margin-right: 3vw;
 }
-.concert_hr {
-	width: 80vw;
-	border-color: #282828;
-	border-width: 0.3vh;
-	margin-bottom: 0vh;
-}
 a {
 	outline:none
 }
